Both visu glspectrum and projectm doesn't run on win32 because vlc_gl_surface_Create can't find a "glx" opengl module.
I tried to replace "glx" with "glwin32" or "opengl", but this still doesn't work.
Logs from my app, bug they are the same with vlc :
D visualization - core: looking for visualization module matching "projectm": 4 candidatesD window - core: looking for vout window module matching "embed-hwnd,any": 1 candidatesD window - core: using vout window module "drawable"D gl - core: looking for opengl module matching "glx": 0 candidatesD gl - core: no opengl modulesD visualization - core: no visualization modules matchedE audio output - core: cannot add user visualization "projectm" (skipped)
To upload designs, you'll need to enable LFS and have an admin enable hashed storage. More information
Child items
0
No child items are currently assigned. Use child items to break down this issue into smaller parts.
Linked items
0
Link issues together to show that they're related.
Learn more.
2.2 is worse, it crashs when trying to use glspectrum or projectm (tested with latest NB).
The changes that made 3.0 unable to use them (but also prevent a crash) improve the way the visu gets an opengl surface to avoid the crash (i suppose).
(gdb) bt[#0](https://code.videolan.org/videolan/vlc/-/issues/0) 0x00000000 in ?? ()[#1](https://code.videolan.org/videolan/vlc/-/issues/1) 0x6df22280 in vlc_gl_MakeCurrent (gl=<optimized out>) at ../../../extras/package/win32/../../../include/vlc_opengl.h:66[#2](https://code.videolan.org/videolan/vlc/-/issues/2) Thread (p_data=<optimized out>) at ../../../extras/package/win32/../../../modules/visualization/projectm.cpp:354[#3](https://code.videolan.org/videolan/vlc/-/issues/3) 0x6a65d2d6 in vlc_entry (p=0x432ee98) at ../../extras/package/win32/../../../src/win32/thread.c:473[#4](https://code.videolan.org/videolan/vlc/-/issues/4) 0x77361287 in msvcrt!_itow_s () from C:\Windows\system32\msvcrt.dll[#5](https://code.videolan.org/videolan/vlc/-/issues/5) 0x77361328 in msvcrt!_endthreadex () from C:\Windows\system32\msvcrt.dll[#6](https://code.videolan.org/videolan/vlc/-/issues/6) 0x7744ee1c in KERNEL32!BaseThreadInitThunk () from C:\Windows\system32\kernel32.dll[#7](https://code.videolan.org/videolan/vlc/-/issues/7) 0x775437eb in ntdll!RtlInitializeExceptionChain () from C:\Windows\system32\ntdll.dll[#8](https://code.videolan.org/videolan/vlc/-/issues/8) 0x775437be in ntdll!RtlInitializeExceptionChain () from C:\Windows\system32\ntdll.dll[#9](https://code.videolan.org/videolan/vlc/-/issues/9) 0x00000000 in ?? ()
with glspectrum :
(gdb) bt[#0](https://code.videolan.org/videolan/vlc/-/issues/0) 0x00000000 in ?? ()[#1](https://code.videolan.org/videolan/vlc/-/issues/1) 0x643b1754 in vlc_gl_MakeCurrent (gl=0x3fb1108) at ../../../extras/package/win32/../../../include/vlc_opengl.h:66[#2](https://code.videolan.org/videolan/vlc/-/issues/2) Thread (p_data=0x3fab384) at ../../../extras/package/win32/../../../modules/visualization/glspectrum.c:406[#3](https://code.videolan.org/videolan/vlc/-/issues/3) 0x6a03d2d6 in vlc_entry (p=0x3f982a0) at ../../extras/package/win32/../../../src/win32/thread.c:473[#4](https://code.videolan.org/videolan/vlc/-/issues/4) 0x77361287 in msvcrt!_itow_s () from C:\Windows\system32\msvcrt.dll[#5](https://code.videolan.org/videolan/vlc/-/issues/5) 0x77361328 in msvcrt!_endthreadex () from C:\Windows\system32\msvcrt.dll[#6](https://code.videolan.org/videolan/vlc/-/issues/6) 0x7744ee1c in KERNEL32!BaseThreadInitThunk () from C:\Windows\system32\kernel32.dll[#7](https://code.videolan.org/videolan/vlc/-/issues/7) 0x775437eb in ntdll!RtlInitializeExceptionChain () from C:\Windows\system32\ntdll.dll[#8](https://code.videolan.org/videolan/vlc/-/issues/8) 0x775437be in ntdll!RtlInitializeExceptionChain () from C:\Windows\system32\ntdll.dll[#9](https://code.videolan.org/videolan/vlc/-/issues/9) 0x00000000 in ?? ()