WGL: OpenGL provider module for Windows

Reactivate the support of projectM and 3dspectrum visualization modules
on Windows.

fix #13650

Signed-off-by: Jean-Baptiste Kempf <jb@videolan.org>